# finamt

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  env.example  pyproject.toml
.github/workflows/: tests.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/_templates/: layout.html
docs/api/: agent.rst  cli.rst  exceptions.rst  index.rst  models.rst  storage.rst  utils.rst
docs/guides/: configuration.rst  installation.rst  quickstart.rst
examples/: batch_process.py  process_receipt.py
notebooks/: llm_comparison.ipynb
readme/: README_de.md
scripts/: validate_xbrl.py
src/finamt/: __init__.py  __version__.py  cli.py  exceptions.py  models.py  ocr_processor.py  progress.py  utils.py
src/finamt/agents/: __init__.py  agent.py  config.py  llm_backend.py  llm_caller.py  pipeline.py  prompts.py
src/finamt/storage/: base.py  project.py  sqlite.py
src/finamt/tax/: __init__.py  bilanz.py  ebilanz.py  elster.py  eric_wrapper.py  eur.py  ustva.py
src/finamt/ui/: api.py  server.py
src/finamt/ui/static/: index.html
src/finamt/ui/static/assets/: index-8Gdu-m9p.js  index-B8kJCl9j.css  index-BE4LEqWT.css  index-BczPqZsS.js  index-BynYaksx.js  index-BzEBFowI.js  index-C8-q83i_.css  index-CEuEeb7W.js  index-CH27FJ59.js  index-COD33_35.js  index-COtUl6JW.css  index-CPUpPhrz.js  index-CPdYc64S.js  index-CS8-ZdyQ.css  index-CUQ1oxq8.css  index-CUZiFbeH.css  index-Ch3DAwES.css  index-CicOmYuu.js  index-Cj30T1qe.js  index-CoNKPnUg.js  index-CsXU5B6p.js  index-CtOn3k1N.css  index-CvNSK6c_.css  index-D2f2ofhs.js  index-DOEtkypw.js  index-DYbpN8jB.js  index-DgJtjlfB.js  index-DiTM-4af.js  index-DnTV2_e1.js  index-DsTlu9TK.css  index-DyZDMa4V.js  index-FO1Z6vae.js  index-JU_i0qL6.css  index-JlWWc3Ir.css  index-p3RxLmTj.js  index-z9aFE5ov.css  index.es-5d-DK0cG.js  index.es-AVX7LtfD.js  index.es-BLjfd653.js  index.es-BijCDR9V.js  (+12 more)
src/finanzamt/: ocr_processor.py  progress.py
src/finanzamt/agents/: agent.py  pipeline.py
src/finanzamt/ui/: api.py
src/finanzamt/ui/static/: index.html
src/finanzamt/ui/static/assets/: index-C2rf_6Ei.js  index-Ni_W1jKT.js
tests/: conftest.py  pytest.ini  test_agent.py  test_bilanz.py  test_cli_inprocess.py  test_config.py  test_ebilanz.py  test_elster.py  test_eric_wrapper.py  test_eur.py  test_exceptions.py  test_llm_caller.py  test_models.py  test_ocr_processor.py  test_pipeline.py  test_private_use.py  test_progress.py  test_project.py  test_prompts.py  test_storage.py  test_ustva.py  test_utils.py
